2007-11-8 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,
	  TODO,
	  lib/autotest,
	  lib/autotest/discover.rb,
	  lib/autotest/rucola.rb,
	  lib/rucola/rucola_support/initialize_hooks.rb:

	- Added the code to make autotest play nice with a rucola app.
	- The initialize_hooks will now call #after_init on an instance if it exists.
	  This is so that #init doesn't have to be overriden to setup defaults etc.
	- Updated TODO.

2007-11-5 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/tasks/xcode.rake,
	  app_generators/rucola/rucola_generator.rb,
	  rucola_generators/controller/controller_generator.rb,
	  rucola_generators/document_model/document_model_generator.rb,
	  rucola_generators/window_controller/window_controller_generator.rb,
	  test/test_document_model_generator.rb:

	- Modified xcode:build rake task to do xcodebuild everytime.
	  Otherwise changes in the nibs will not be reflected in the app bundle.
	- Updated the generators with better banners.

2007-11-5 Eloy Duran <e.duran@superalloy.nl>

	* TODO,
	  lib/rucola/tasks/xcode.rake:

	- Fixed a bug where the local var 'executable' was not passed explicitly into the
	  thread. Which could result in the var being GC'ed.
	- Added TODO about possible renaming from Notifications#notify_on to Notifications#when.

2007-11-4 Eloy Duran <e.duran@superalloy.nl>

	* website/index.html,
	  website/index.txt:

	Updated the website with extra info on installing and info about the "extras".

2007-11-3 Eloy Duran <e.duran@superalloy.nl>

	* License.txt,
	  README.txt,
	  app_generators/rucola/USAGE,
	  rucola_generators/document_model/USAGE,
	  website/index.html,
	  website/index.txt,
	  website/template.rhtml:

	Cleaned for 0.0.1 super-duper-alpha release.

2007-11-3 Justin Palmer <justin@activereload.net>

	* License.txt,
	  README.txt:

	Update the README with an overview of Rucola.

2007-11-3 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,