@@ -31,7 +31,11 @@ bin/rucola
 config/hoe.rb
 config/requirements.rb
 lib/autotest/discover.rb
+lib/autotest/fail.png
+lib/autotest/growl_images.rb
+lib/autotest/pass.png
 lib/autotest/rucola.rb
+lib/autotest/sound.rb
 lib/rucola.rb
 lib/rucola/info_plist.rb
 lib/rucola/initializer.rb
